Syntax highlighting and Error checking (#214)
* add new dep for antlr and rsyntaxtextarea

* initial implementation of syntax highlighting and error checking

* update options to follow new theme engine

* fix popup exception by removing popups, remove extra stuff

* use focus listener to change program location

* fix tab

* cleanup code

* add basic test for editing text in graph

* formatting

* fix "a" bug, add update test

* fix formatting

* fix null pointer exception

---------

Co-authored-by: 2over12 <ian.smith@trailofbits.com>